fixed-gridbox-alignment 20181006

--- a/login/style.css
+++ b/login/style.css
@@ -5,7 +5,7 @@ body{
 	font-family: 'Comfortaa', cursive;
 	text-align:center;
 }
-.siign{	display: flex;background: #220a1a;}
+.siign{	display: flex;background: #220a1a;height: 100%;}
 input[type="text"], input[type="password"]{
 	outline:none;
 	padding:10px;
@@ -53,7 +53,7 @@ input[type="submit"]:hover{
 	color: white;
 }
 
-.sign-container{display: flex;align-items: flex-start;width: 100%;height: 80%;margin-top: 5%;margin-bottom: 5%;}
+.sign-container{display: flex;align-items: flex-start;width: 100%;padding-top: 7%;padding-bottom: 7%;}
 h1,h2,h3,p{color: #fff}
 .sign-container>div{width: 50%;height: 100%;}
 .sign-container>div:first-child{display: flex;position: relative;align-items: center;margin-left: 10%;}
